Hide delete button on messages unless admin or sender, fixed vertical alignment on username/timestamp section, modified approute to allow admin deletion of messages

--- a/static/css/messages.css
+++ b/static/css/messages.css
@@ -203,8 +203,8 @@
     display: flex;
     flex-direction: row;
     font-size: 0.75rem;
+    align-items: center;
     color: #bbb;
-    margin-bottom: 4px;
 }
 
 .delete-im {
